--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,7 +24,7 @@
           </ul>
       </div>
       <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="email" placeholder="Email address" aria-label="Search" required>
+          <input class="form-control mr-sm-2" type="email" placeholder="Email Address" aria-label="Search" required>
       </form>
   </nav>
     <h3>Hello, world!</h3>
