--- a/views/sheets.ejs
+++ b/views/sheets.ejs
@@ -1,4 +1,9 @@
 <%- include ("partials/header.ejs") %>
 <!-- Global Navbar -->
+<ul class="nav">
+    <li class="nav-item">
+        
+    </li>
+</ul>
 
 <%- include ("partials/footer.ejs") %>
