Gave info to README.md

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,3 +1,7 @@
 <%- include ('./partials/header') -%>
-
+<h1 class="display-1">Welcome!</h1>
+<h1>Welcome to the most complicated name ever</h1>
+<h2 class="display-4">Word to Markdown to... converter!</h2>
+<p>If you want to read more about this, visit my <a href="https://github.com/yappermags/work_app">Github</a> here.</p>
+</div>
 <%- include ('./partials/footer') -%>
