--- a/views/docx.ejs
+++ b/views/docx.ejs
@@ -1,4 +1,9 @@
 <%- include ('./partials/header') -%>
+    <div class="banner">
+      <div class="container">
+        <h1><a href="/">Mammoth</a></h1>
+      </div>
+    </div>
     <div class="container">
       <!-- <input id="document" type="file" /> -->
       <div class="row">
@@ -12,4 +17,5 @@
           </div>
         </div>
     </div>
+
 <%- include ('./partials/footer') -%>
