--- a/views/docx.ejs
+++ b/views/docx.ejs
@@ -1,14 +1,10 @@
 <%- include ('./partials/header') -%>
-    <div class="banner">
-      <div class="container">
-        <h1><a href="/">Mammoth</a></h1>
-      </div>
     </div>
     <div class="container">
-      <!-- <input id="document" type="file" /> -->
+      <input id="document" type="file" />
       <div class="row">
         <div class="span8">
-          <div id="output" class="well">
+          <div id="output" class="non-well">
           </div>
         </div>
         <div class="span4">
