--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,4 +1,6 @@
 <%- include ('./partials/header') -%>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    
 <h1 class="display-1">Welcome!</h1>
 <h1>Welcome to the most complicated name ever.</h1>
 <h2 class="display-4">Word to Markdown to... converter!</h2>
