--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -43,7 +43,7 @@ body {
     margin: 0 0 0 20px;
 }
 
-.well {
+.non-well {
     background-color: #f2f2f2;
     border: 1px solid #ccc;
     padding: 1em;
