About to publish

--- a/views/README.ejs
+++ b/views/README.ejs
@@ -18,6 +18,7 @@
 <li>EJS(Embedded Javascript)</li>
 <li>Nodemon</li>
 <li>Mammoth</li>
+<li>Print.js</li>
 </ul>
 
 <h3 id="frontend-dependencies">Frontend Dependencies</h3>
