Revert to last good state

--- a/views/README.ejs
+++ b/views/README.ejs
@@ -36,8 +36,7 @@
 <p> This is for the kind of people who want to take a raw Word document, but don&#39;t want to have to manually format it themselves. They can email their client to see what formats they want. I will give you a JS prompt to enter in format details. my app will take those details (We are also not saving formats into databases for security reasons) and apply them to your document.</p>
 <p>If you have any problems about using no databases, put it in the <a href="https://github.com/yappermags/work_app/issues">issues page.</a></p>
 <h3 id="versions">Versions</h3>
-<p><em>May 29, 2020</em>. <strong>Alpha Version</strong>1.0 / 1.0.7</p>
-<p><em>June 6/7/8</em>. <strong>Alpha Version</strong> 1.0.10</p>
+<p><em>May 29, 2020</em>. <strong>Version</strong></p>
 <hr>
 <h1 id="what-might-happen-soon">What Might happen soon</h1>
 <h2 id="second-page">Second page</h2>
@@ -46,9 +45,8 @@
 <p>I am going to take the Mammoth source, <strong>anylize</strong> and take notes about Mammoth, <strong>break it down</strong> to the very barebones source, then <strong>build it back up</strong>. I will try with all of my power to make this a public npm package.</p>
 <h3 id="when">When?</h3>
 <p>I expect to release and use my own API by <em>Version</em> <strong>Beta One</strong>, or to be technical, around <strong>Version 0.5</strong>.</p>
-<blockquote class="blockquote">
+<blockquote>
 <p>@@Copyright 2020 LIKE Productions</p>
-<img src="stylesheets/icon2.png" height="200" width="150">
 </blockquote>
 <br>
 <h1>Twitter Area</h1>
