--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,3 +53,20 @@ body {
 .messages .warning {
     color: #cc6600;
 }
+
+@media print {
+   #messages {
+       display: none;
+   }
+
+   .no-print {
+       display: none;
+   }
+
+   @page {
+    margin-top: 2cm;
+    margin-bottom: 2cm;
+    margin-right: 2cm;
+   }
+
+  }
